<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.berangerelatouche.geoskate.AddSpotFragment">


    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/sauvegarder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.97"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="11dp"
        android:text="@string/geoskate"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="60sp"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/back_arraow"
        android:onClick="onBackArrow"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_arraw" />

    <ToggleButton
        android:id="@+id/but_add_by_address"
        android:layout_width="206dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:onClick="addPlace"
        android:text="@string/ajouter_par_address"
        android:textOff="@string/ajouter_par_address"
        android:textOn="@string/ajouter_par_address"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ToggleButton
        android:id="@+id/but_use_current_pos"
        android:layout_width="206dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/utiliser_position_actuel"
        android:textOff="@string/utiliser_position_actuel"
        android:textOn="@string/utiliser_position_actuel"
        app:layout_constraintLeft_toLeftOf="@+id/but_add_by_address"
        app:layout_constraintTop_toBottomOf="@+id/but_add_by_address" />

    <ToggleButton
        android:id="@+id/but_take_pic"
        android:layout_width="206dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:onClick="dispatchTakePictureIntent"
        android:text="@string/prendre_une_photo"
        android:textOff="@string/ajouter_une_photo"
        android:textOn="@string/photo_ajouter"
        app:layout_constraintLeft_toLeftOf="@+id/but_use_current_pos"
        app:layout_constraintTop_toBottomOf="@+id/but_use_current_pos" />

    <EditText
        android:id="@+id/edit_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="11dp"
        android:layout_marginStart="11dp"
        android:layout_marginTop="97dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/nom"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/but_take_pic" />

    <EditText
        android:id="@+id/edit_desc"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/description"
        app:layout_constraintLeft_toLeftOf="@+id/edit_name"
        app:layout_constraintTop_toBottomOf="@+id/edit_name" />


</android.support.constraint.ConstraintLayout>
